--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -15,6 +15,10 @@ permissions:
   pages: write
   id-token: write
 
+
+remote_theme: pages-themes/hacker@v0.2.0
+plugins: - jekyll-remote-theme # add this line to the plugins list if you already have one
+
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
