--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 logo: assets/photo.jpg
 title: Назаров Кирилл Ильич
-description: Резюме учителя
+description: Резюме токаря-универсала
 show_downloads: true
 
