--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,5 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 logo: assets/photo.jpg
 title: Назаров Кирилл Ильич
-description: Резюме токаря-универсала
+description: turner (хочешь жить — умей вертеться)
 show_downloads: true
-
